--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <header>
     <!-- Replace src with your lab logo path -->
-    <img src="https://via.placeholder.com/120x120.png?text=LFMT" alt="LFMT logo" />
+    <img src="logoEng.png" alt="LFMT logo" />
     <h1>LFMT • UAV Design & AI‑CF Project</h1>
     <h2>Resources & social links from the paper presentation</h2>
   </header>
