--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 </head>
 <body>
   <header>
-    <!-- Replace src with your lab logo path -->
-    <img src="logoEng.png" alt="LFMT logo" />
+    <!-- Logo file stored locally in same repo -->
+    <img src="logoENG.png" alt="LFMT logo" />
     <h1>LFMT • UAV Design & AI‑CF Project</h1>
     <h2>Resources & social links from the paper presentation</h2>
   </header>
 
   <!-- Main link hub -->
-  <a class="link-btn" href="https://github.com/LFMT-uav/ai-cf-correlation" target="_blank">GitHub Repo (Equation & Code)</a>
-  <a class="link-btn" href="https://lfmt.mech.auth.gr" target="_blank">LFMT Lab Website</a>
-  <a class="link-btn" href="https://www.linkedin.com/company/lfmt-lab" target="_blank">LinkedIn Updates</a>
-  <a class="link-btn" href="https://twitter.com/LFMT_lab" target="_blank">X / Twitter Feed</a>
+  <a class="link-btn" href="https://lfmt.gr/" target="_blank">LFMT Lab Website</a>
+  <a class="link-btn" href="https://www.linkedin.com/company/uav-irc/" target="_blank">UAV-iRC LinkedIn Page</a>
+  <a class="link-btn" href="https://www.linkedin.com/in/chris-pliakos/ " target="_blank">Presenter LinkedIn</a>
+  <a class="link-btn" href="https://scholar.google.com/citations?user=_JL17xsAAAAJ&hl=el" target="_blank">Google Scholar Profile</a>
   <a class="link-btn" href="/assets/paper.pdf" target="_blank">Download the Conference Paper (PDF)</a>
-  <a class="link-btn" href="mailto:uav@lfmt.mech.auth.gr">Contact the Team ✉️</a>
+  <a class="link-btn" href="mailto:pliakosc@auth.gr">Contact the Team ✉️</a>
 
   <footer>
     © 2025 Laboratory for Fluid Mechanics & Turbomachinery, AUTH
