--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="LFMT logo" />
+    <img src="logoENG.png" alt="LFMT logo" />
     <h1>LFMT • UAV Design & AI‑CF Project</h1>
     <h2>Resources & social links from the paper presentation</h2>
   </header>
