--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <header>
     <img src="logoENG.png" alt="LFMT logo" />
-    <h1>LFMT • UAV Design & AI‑CF Project</h1>
+    <h1>LFMT • Injecting AI into UAV Design</h1>
     <h2>Resources & social links from the paper presentation</h2>
   </header>
 
@@ -45,7 +45,7 @@
   <a class="link-btn" href="https://www.linkedin.com/company/uav-irc/" target="_blank">UAV-iRC LinkedIn Page</a>
   <a class="link-btn" href="https://www.linkedin.com/in/chris-pliakos/ " target="_blank">Presenter LinkedIn</a>
   <a class="link-btn" href="https://scholar.google.com/citations?user=_JL17xsAAAAJ&hl=el" target="_blank">Google Scholar Profile</a>
-  <a class="link-btn" href="/assets/paper.pdf" target="_blank">Download the Conference Paper (PDF)</a>
+  <a class="link-btn" href="/assets/paper_AIAA.pdf" target="_blank">Download the Conference Paper (PDF)</a>
   <a class="link-btn" href="mailto:pliakosc@auth.gr">Contact the Team ✉️</a>
 
   <footer>
