--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
-      --grad-1: #4facfe;
-      --grad-2: #00f2fe;
-      --glass-bg: rgba(255,255,255,0.15);
-      --text-light: #eef4fb;
+      --grad-1: #2c3e50; /* dark navy */
+      --grad-2: #34495e; /* slate gray */
+      --glass-bg: rgba(255, 255, 255, 0.08);
+      --text-light: #e0e0e0;
       --radius: 1rem;
       --transition: 0.3s ease-in-out;
     }
@@ -21,31 +21,36 @@
       font-family: 'Inter', sans-serif;
       background: linear-gradient(135deg, var(--grad-1), var(--grad-2));
       color: var(--text-light);
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      overflow-x:hidden;
-      position:relative;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-x: hidden;
+      position: relative;
     }
     /* floating background blobs */
     body::before, body::after {
-      content:'';
-      position:absolute;
-      border-radius:50%;
-      opacity:0.6;
+      content: '';
+      position: absolute;
+      border-radius: 50%;
+      opacity: 0.2;
       animation: float 8s ease-in-out infinite alternate;
     }
+
     body::before {
-      width:500px; height:500px;
-      background: radial-gradient(circle at top left, rgba(255,255,255,0.3), transparent);
-      top:-200px; left:-200px;
+      width: 500px;
+      height: 500px;
+      background: radial-gradient(circle at top left, rgba(255, 255, 255, 0.08), transparent);
+      top: -200px;
+      left: -200px;
     }
     body::after {
-      width:400px; height:400px;
-      background: radial-gradient(circle at bottom right, rgba(255,255,255,0.2), transparent);
-      bottom:-150px; right:-150px;
-      animation-duration:10s;
+      width: 400px;
+      height: 400px;
+      background: radial-gradient(circle at bottom right, rgba(255, 255, 255, 0.05), transparent);
+      bottom: -150px;
+      right: -150px;
+      animation-duration: 10s;
     }
     @keyframes float {
       to { transform: translateY(20px) translateX(20px); }
@@ -61,12 +66,12 @@
       margin-bottom:1rem;
     }
     h1 {
-      font-size:clamp(1.8rem,5vw,2.5rem);
-      font-weight:700;
-      background: linear-gradient(90deg, #fff, rgba(255,255,255,0.7));
+      font-size: clamp(1.8rem, 5vw, 2.5rem);
+      font-weight: 700;
+      background: linear-gradient(90deg, #f0f0f0, #bbb);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      margin-bottom:0.5rem;
+      margin-bottom: 0.5rem;
     }
     h2 {
       font-size:clamp(1rem,3vw,1.2rem);
