--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
-      --grad-1: #2c3e50; /* dark navy */
-      --grad-2: #34495e; /* slate gray */
+      --grad-1: #2c3e50;
+      --grad-2: #34495e;
       --glass-bg: rgba(255, 255, 255, 0.08);
       --text-light: #e0e0e0;
       --radius: 1rem;
       --transition: 0.3s ease-in-out;
     }
 
-    * { box-sizing: border-box; margin:0; padding:0; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     body {
       font-family: 'Inter', sans-serif;
       background: linear-gradient(135deg, var(--grad-1), var(--grad-2));
@@ -28,7 +32,7 @@
       overflow-x: hidden;
       position: relative;
     }
-    /* floating background blobs */
+
     body::before, body::after {
       content: '';
       position: absolute;
@@ -44,6 +48,7 @@
       top: -200px;
       left: -200px;
     }
+
     body::after {
       width: 400px;
       height: 400px;
@@ -52,19 +57,24 @@
       right: -150px;
       animation-duration: 10s;
     }
+
     @keyframes float {
-      to { transform: translateY(20px) translateX(20px); }
+      to {
+        transform: translateY(20px) translateX(20px);
+      }
     }
 
     header {
-      text-align:center;
-      padding:4rem 1rem 2rem;
-      z-index:1;
+      text-align: center;
+      padding: 4rem 1rem 2rem;
+      z-index: 1;
     }
+
     header img {
-      width:100px;
-      margin-bottom:1rem;
+      width: 100px;
+      margin-bottom: 1rem;
     }
+
     h1 {
       font-size: clamp(1.8rem, 5vw, 2.5rem);
       font-weight: 700;
@@ -73,55 +83,108 @@
       -webkit-text-fill-color: transparent;
       margin-bottom: 0.5rem;
     }
+
     h2 {
-      font-size:clamp(1rem,3vw,1.2rem);
-      font-weight:400;
-      opacity:0.85;
-      margin-bottom:3rem;
+      font-size: clamp(1rem, 3vw, 1.2rem);
+      font-weight: 400;
+      opacity: 0.85;
+      margin-bottom: 3rem;
     }
 
-    /* grid of cards */
     .links {
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-      gap:1rem;
-      width:100%;
-      max-width:900px;
-      padding:0 1rem;
-      z-index:1;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1rem;
+      width: 100%;
+      max-width: 900px;
+      padding: 0 1rem;
+      z-index: 1;
     }
+
     .link-card {
-      display:flex;
-      align-items:center;
-      padding:1rem 1.5rem;
+      display: flex;
+      align-items: center;
+      padding: 1rem 1.5rem;
       background: var(--glass-bg);
       backdrop-filter: blur(10px);
       border-radius: var(--radius);
-      text-decoration:none;
+      text-decoration: none;
       color: #fff;
-      font-weight:600;
-      box-shadow:0 4px 30px rgba(0,0,0,0.1);
-      opacity:0;
+      font-weight: 600;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      opacity: 0;
       transform: translateY(20px);
       transition: var(--transition);
     }
+
     .link-card i {
-      font-size:1.5rem;
-      margin-right:0.75rem;
-      flex-shrink:0;
+      font-size: 1.5rem;
+      margin-right: 0.75rem;
+      flex-shrink: 0;
     }
+
     .link-card:hover {
       transform: translateY(-5px) scale(1.02);
-      box-shadow:0 8px 35px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);
     }
 
     footer {
-      margin-top:auto;
-      padding:2rem 1rem 1rem;
-      font-size:0.8rem;
-      opacity:0.7;
-      text-align:center;
-      z-index:1;
+      margin-top: auto;
+      padding: 2rem 1rem 1rem;
+      font-size: 0.8rem;
+      opacity: 0.7;
+      text-align: center;
+      z-index: 1;
+    }
+
+    /* Dropdown Styles */
+    .dropdown {
+      position: relative;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .dropdown-wrapper {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    .dropdown-wrapper span {
+      font-weight: 600;
+    }
+
+    .dropdown-list {
+      list-style: none;
+      background: var(--glass-bg);
+      border-radius: 0.5rem;
+      margin-top: 0.5rem;
+      padding: 0.5rem 0;
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 2.25rem;
+      z-index: 10;
+      min-width: 220px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(8px);
+    }
+
+    .dropdown-list li a {
+      display: block;
+      padding: 0.5rem 1rem;
+      color: var(--text-light);
+      text-decoration: none;
+      font-weight: 400;
+      transition: background 0.2s;
+    }
+
+    .dropdown-list li a:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .dropdown:hover .dropdown-list {
+      display: block;
     }
   </style>
 </head>
@@ -137,16 +200,30 @@
     <a class="link-card" href="https://lfmt.gr/" target="_blank"><i class="fas fa-globe"></i>LFMT Lab Website</a>
     <a class="link-card" href="https://www.linkedin.com/company/uav-irc/" target="_blank"><i class="fab fa-linkedin"></i>UAV-iRC LinkedIn</a>
     <a class="link-card" href="https://www.linkedin.com/in/chris-pliakos/" target="_blank"><i class="fab fa-linkedin"></i>Presenter LinkedIn</a>
-    <a class="link-card" href="https://scholar.google.com/citations?user=_JL17xsAAAAJ&hl=el"
-       target="_blank"><i class="fas fa-graduation-cap"></i>Google Scholar</a>
-    <a class="link-card" href="/assets/paper_AIAA.pdf" target="_blank"><i class="fas fa-file-pdf"></i>Download Paper</a>
+    <a class="link-card" href="https://scholar.google.com/citations?user=_JL17xsAAAAJ&hl=el" target="_blank">
+      <i class="fas fa-graduation-cap"></i>Google Scholar</a>
+    <a class="link-card" href="https://www.researchgate.net/profile/Chris-Pliakos" target="_blank">
+      <i class="fab fa-researchgate"></i>ResearchGate</a>
+
+    <!-- Dropdown for papers -->
+    <div class="link-card dropdown">
+      <i class="fas fa-file-pdf"></i>
+      <div class="dropdown-wrapper">
+        <span>Download Papers</span>
+        <ul class="dropdown-list">
+          <li><a href="/assets/paper_AIAA.pdf" target="_blank">AI-Augmented UAV Design (AIAA)</a></li>
+          <li><a href="/assets/paper_CFD_UAV.pdf" target="_blank">CFD Analysis of UAV Propulsion</a></li>
+          <li><a href="/assets/paper_Optimization.pdf" target="_blank">Design Optimization with ML</a></li>
+        </ul>
+      </div>
+    </div>
+
     <a class="link-card" href="mailto:pliakosc@auth.gr"><i class="fas fa-envelope"></i>Contact the Team</a>
   </div>
 
   <footer>© 2025 Laboratory for Fluid Mechanics & Turbomachinery, AUTH</footer>
 
   <script>
-    // simple fade-in on scroll
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(e => {
         if (e.isIntersecting) {
