--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
       <div class="dropdown-wrapper">
         <span>Download Papers</span>
         <ul class="dropdown-list">
-          <li><a href="/assets/paper_AIAA.pdf" target="_blank">AI-Augmented UAV Design (AIAA)</a></li>
-          <li><a href="/assets/paper_CFD_UAV.pdf" target="_blank">CFD Analysis of UAV Propulsion</a></li>
-          <li><a href="/assets/paper_Optimization.pdf" target="_blank">Design Optimization with ML</a></li>
+          <li><a href="/assets/paper_AIAA.pdf" target="_blank">Physics-Enhanced MFNN for UAV wings (AIAA)</a></li>
+          <li><a href="/assets/paper_aifluids.pdf" target="_blank">Data-driven Cf estimation for UAV wings (AIFLUIDS)</a></li>
+          <li><a href="/assets/paper_algorithms.pdf" target="_blank">Automated CFD pipeline from geometry to simulation (Algorithms)</a></li>
         </ul>
       </div>
     </div>
