--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       transition: var(--transition);
       cursor: pointer;
+      z-index: 5; /* ensures it stacks above */
     }
 
     .dropdown-wrapper {
@@ -173,11 +174,12 @@
       display: none;
       position: absolute;
       top: 100%;
-      left: 2.25rem;
+      left: 0;
       z-index: 10;
       min-width: 220px;
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(8px);
+      pointer-events: auto;
     }
 
     .dropdown-list li a {
